[package]
name = "pdfcr"
version = "0.1.0"
authors = ["g-w1 <jacoblevgw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { git = "https://github.com/fschutt/printpdf", ref = "28446a6" }
textwrap = "0.13.0"
