[package]
name = "pdfcr"
version = "1.0.0"
authors = ["g-w1 <jacoblevgw@gmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/g-w1/pdfcr"
repository = "https://github.com/g-w1/pdfcr"
description = "A tool to render a codebase to a pdf."
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { git = "https://github.com/fschutt/printpdf", ref = "28446a6" }
textwrap = "0.13.0"
walkdir = "2"
